INFO0602-LangagesCompilation/Projet/y.output
   0  $accept : EXEC $end

   1  EXEC : LEVEL_BLOCK EXEC
   2       | LEVEL_BLOCK

   3  $$1 :

   4  LEVEL_BLOCK : level $$1 CONTENT_LIST end

   5  CONTENT_LIST : CONTENT_LIST CONTENT
   6               |

   7  CONTENT : PUT_FUNC

   8  PUT_FUNC : put '(' EXPRESSION ',' EXPRESSION ',' ITEM ')'

   9  ITEM : robot
  10       | probe
  11       | empty
  12       | block
  13       | trap
  14       | ladder
  15       | bomb
  16       | life
  17       | key '(' EXPRESSION ')'
  18       | gate '(' EXPRESSION ')'
  19       | door '(' EXPRESSION ')'
  20       | start
  21       | exite

  22  EXPRESSION : integer
  23             | EXPRESSION '+' EXPRESSION
  24             | EXPRESSION '-' EXPRESSION
  25             | '-' EXPRESSION
  26             | EXPRESSION '*' EXPRESSION
  27             | EXPRESSION '/' EXPRESSION
  28             | '(' EXPRESSION ')'

  29  ASSIGNMENT : id '=' EXPRESSION
  30             | variable '=' EXPRESSION

state 0
	$accept : . EXEC $end  (0)

	level  shift 1
	.  error

	EXEC  goto 2
	LEVEL_BLOCK  goto 3


state 1
	LEVEL_BLOCK : level . $$1 CONTENT_LIST end  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 4


state 2
	$accept : EXEC . $end  (0)

	$end  accept


state 3
	EXEC : LEVEL_BLOCK . EXEC  (1)
	EXEC : LEVEL_BLOCK .  (2)

	level  shift 1
	$end  reduce 2

	EXEC  goto 5
	LEVEL_BLOCK  goto 3


state 4
	LEVEL_BLOCK : level $$1 . CONTENT_LIST end  (4)
	CONTENT_LIST : .  (6)

	.  reduce 6

	CONTENT_LIST  goto 6


state 5
	EXEC : LEVEL_BLOCK EXEC .  (1)

	.  reduce 1


state 6
	LEVEL_BLOCK : level $$1 CONTENT_LIST . end  (4)
	CONTENT_LIST : CONTENT_LIST . CONTENT  (5)

	end  shift 7
	put  shift 8
	.  error

	CONTENT  goto 9
	PUT_FUNC  goto 10


state 7
	LEVEL_BLOCK : level $$1 CONTENT_LIST end .  (4)

	.  reduce 4


state 8
	PUT_FUNC : put . '(' EXPRESSION ',' EXPRESSION ',' ITEM ')'  (8)

	'('  shift 11
	.  error


state 9
	CONTENT_LIST : CONTENT_LIST CONTENT .  (5)

	.  reduce 5


state 10
	CONTENT : PUT_FUNC .  (7)

	.  reduce 7


state 11
	PUT_FUNC : put '(' . EXPRESSION ',' EXPRESSION ',' ITEM ')'  (8)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 15


state 12
	EXPRESSION : integer .  (22)

	.  reduce 22


state 13
	EXPRESSION : '-' . EXPRESSION  (25)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 16


state 14
	EXPRESSION : '(' . EXPRESSION ')'  (28)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 17


state 15
	PUT_FUNC : put '(' EXPRESSION . ',' EXPRESSION ',' ITEM ')'  (8)
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	','  shift 22
	.  error


state 16
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : '-' EXPRESSION .  (25)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'*'  shift 20
	'/'  shift 21
	'+'  reduce 25
	'-'  reduce 25
	','  reduce 25
	')'  reduce 25


state 17
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)
	EXPRESSION : '(' EXPRESSION . ')'  (28)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 23
	.  error


state 18
	EXPRESSION : EXPRESSION '+' . EXPRESSION  (23)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 24


state 19
	EXPRESSION : EXPRESSION '-' . EXPRESSION  (24)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 25


state 20
	EXPRESSION : EXPRESSION '*' . EXPRESSION  (26)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 26


state 21
	EXPRESSION : EXPRESSION '/' . EXPRESSION  (27)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 27


state 22
	PUT_FUNC : put '(' EXPRESSION ',' . EXPRESSION ',' ITEM ')'  (8)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 28


state 23
	EXPRESSION : '(' EXPRESSION ')' .  (28)

	.  reduce 28


state 24
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION '+' EXPRESSION .  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'*'  shift 20
	'/'  shift 21
	'+'  reduce 23
	'-'  reduce 23
	','  reduce 23
	')'  reduce 23


state 25
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION '-' EXPRESSION .  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'*'  shift 20
	'/'  shift 21
	'+'  reduce 24
	'-'  reduce 24
	','  reduce 24
	')'  reduce 24


state 26
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION '*' EXPRESSION .  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	.  reduce 26


state 27
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)
	EXPRESSION : EXPRESSION '/' EXPRESSION .  (27)

	.  reduce 27


state 28
	PUT_FUNC : put '(' EXPRESSION ',' EXPRESSION . ',' ITEM ')'  (8)
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	','  shift 29
	.  error


state 29
	PUT_FUNC : put '(' EXPRESSION ',' EXPRESSION ',' . ITEM ')'  (8)

	robot  shift 30
	probe  shift 31
	empty  shift 32
	block  shift 33
	trap  shift 34
	ladder  shift 35
	bomb  shift 36
	life  shift 37
	key  shift 38
	gate  shift 39
	door  shift 40
	start  shift 41
	exite  shift 42
	.  error

	ITEM  goto 43


state 30
	ITEM : robot .  (9)

	.  reduce 9


state 31
	ITEM : probe .  (10)

	.  reduce 10


state 32
	ITEM : empty .  (11)

	.  reduce 11


state 33
	ITEM : block .  (12)

	.  reduce 12


state 34
	ITEM : trap .  (13)

	.  reduce 13


state 35
	ITEM : ladder .  (14)

	.  reduce 14


state 36
	ITEM : bomb .  (15)

	.  reduce 15


state 37
	ITEM : life .  (16)

	.  reduce 16


state 38
	ITEM : key . '(' EXPRESSION ')'  (17)

	'('  shift 44
	.  error


state 39
	ITEM : gate . '(' EXPRESSION ')'  (18)

	'('  shift 45
	.  error


state 40
	ITEM : door . '(' EXPRESSION ')'  (19)

	'('  shift 46
	.  error


state 41
	ITEM : start .  (20)

	.  reduce 20


state 42
	ITEM : exite .  (21)

	.  reduce 21


state 43
	PUT_FUNC : put '(' EXPRESSION ',' EXPRESSION ',' ITEM . ')'  (8)

	')'  shift 47
	.  error


state 44
	ITEM : key '(' . EXPRESSION ')'  (17)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 48


state 45
	ITEM : gate '(' . EXPRESSION ')'  (18)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 49


state 46
	ITEM : door '(' . EXPRESSION ')'  (19)

	integer  shift 12
	'-'  shift 13
	'('  shift 14
	.  error

	EXPRESSION  goto 50


state 47
	PUT_FUNC : put '(' EXPRESSION ',' EXPRESSION ',' ITEM ')' .  (8)

	.  reduce 8


state 48
	ITEM : key '(' EXPRESSION . ')'  (17)
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 51
	.  error


state 49
	ITEM : gate '(' EXPRESSION . ')'  (18)
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 52
	.  error


state 50
	ITEM : door '(' EXPRESSION . ')'  (19)
	EXPRESSION : EXPRESSION . '+' EXPRESSION  (23)
	EXPRESSION : EXPRESSION . '-' EXPRESSION  (24)
	EXPRESSION : EXPRESSION . '*' EXPRESSION  (26)
	EXPRESSION : EXPRESSION . '/' EXPRESSION  (27)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 53
	.  error


state 51
	ITEM : key '(' EXPRESSION ')' .  (17)

	.  reduce 17


state 52
	ITEM : gate '(' EXPRESSION ')' .  (18)

	.  reduce 18


state 53
	ITEM : door '(' EXPRESSION ')' .  (19)

	.  reduce 19


Rules never reduced:
	ASSIGNMENT : id '=' EXPRESSION  (29)
	ASSIGNMENT : variable '=' EXPRESSION  (30)


29 terminals, 10 nonterminals
31 grammar rules, 54 states
